Few changes to the camera screen. Carousel and sidebar overlap fixed. JS Script links moved to the top using the DEFER method

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -95,3 +95,24 @@
     width: 350px;
     height: auto;
 }
+
+.main-camera-box {
+    width: 100%;
+    height: 60%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4vw;
+}
+
+.main-camera {
+    width: 97.5%; /*provisório*/
+    height: auto;
+    max-height: 100%;
+}
+
+.secondary-cameras-box {
+    width: 100%;
+    height: 30%;
+    justify-content: center;
+    align-items: center;
+}
